# app/Http/Controllers/Api/ActivityController.php
@@ -8,6 +8,30 @@ use Illuminate\Http\Request;
 
 class ActivityController extends Controller
 {
+    /**
+     * @OA\Get(
+     *     path="/activities",
+     *     summary="Получить все виды деятельности",
+     *     tags={"Деятельности"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Успешный ответ",
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(
+     *                 type="object",
+     *                 @OA\Property(property="id", type="integer", example=1),
+     *                 @OA\Property(property="name", type="string", example="Еда"),
+     *                 @OA\Property(property="parent_id", type="integer", nullable=true, example=null)
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Виды деятельности не найдены"
+     *     )
+     * )
+     */
     public function index()
     {
         return Activity::all();
